Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(10/13/17) - Added New Feature - Version 3.5
[+] Sticky header option added
[+] Email social option added
[+] New Blog layout with 3 Column added
[*] Improved scroll to top button look
[*] Changed About box look

(09/29/17) - Added New Feature - Version 3.4
[+] Added Full-width Without Boxes Site layout option
[+] Added option to include SlideDeck slider on home page

(09/13/17) - Added New Feature - Version 3.3
[+] Added Full-width Site layout option

(09/04/17) - Bug fix - Version 3.2.1
[!] Fixed color issue for input

(08/31/17) - Added New Feature - Version 3.2
[+] New WooCommerce templates (for cart, checkout, and my account pages) added

(08/30/17) - Bug fix - Version 3.1.1
[!] Fixed Team Member not getting display issue
[*] Features section image size reduced and added border
[*] Contact form increased bottom margin

(08/29/17) - Added New Feature - Version 3.1
[+] About box (for home page) added
[+] Features section (for home page) added
[+] Contact section (for footer) added
[+] New WooCommerce template (for single product page) added 

(08/09/17) - Added New Feature - Version 3.0
[+] New WooCommerce template (for shop page) added
[*] Improved look & feel of Team and Testimonial element

(07/31/17) - Added New Feature - Version 2.9
[+] Team element (for home page) added
[*] Improved SEO - ALT tags

(07/26/17) - Added New Feature - Version 2.8
[+] - Testimonial element(for home page) added

(06/25/17) - Bug fix - Version 2.7.2
[!] - Cannot modify header issue resolved

(06/22/17) - Bug fix - Version 2.7.1
[!] - Fixed bug with media page not getting displayed

(06/22/17) - Added New Feature - Version 2.7
[*] - Minor changes in admin look & feel
[+] - Highlighted edit links in the customizer preview

(06/09/17) - Added New Feature - Version 2.6
[+] - Choose to display or turn off Featured Images For Pages