@@ -28,9 +28,7 @@ $responsive_options = responsive_get_options();
 ?>
 <?php responsive_wrapper_bottom(); // after wrapper content hook ?>
 </div><!-- end of #wrapper -->
-<?php if (isset($responsive_options['site_layout_option']) && ($responsive_options['site_layout_option'] == 'full-width-layout') && (!( is_home() || is_front_page() ))) {?>
-</div>
-<?php } ?>	
+
 <?php responsive_wrapper_end(); // after wrapper hook ?>
 <?php if ( is_home() && ! is_front_page() ) {?>
 </div>
