@@ -31,7 +31,6 @@ if ( !defined( 'ABSPATH' ) ) {
 		</div><!-- end of .post-data -->
 <?php } else { ?>
 	<div class="post-data">
-		<?php printf( __( 'Posted in %s', 'responsive' ), get_the_category_list( ', ' ) ); ?>
 		<?php the_tags( __( 'Tagged with:', 'responsive' ) . ' ', ', ', '<br />' ); ?>
 	</div><!-- end of .post-data -->
 <?php } ?>
