@@ -21,7 +21,7 @@ if ( !defined( 'ABSPATH' ) ) {
 ?>
 
 <?php if ( is_single() ): ?>
-	<h1 class="entry-title post-title"><?php the_title(); ?></h1>
+	<h1 class="entry-title post-title responsive"><?php the_title(); ?></h1>
 <?php else: ?>
 	<h2 class="entry-title post-title"><a href="<?php the_permalink() ?>" rel="bookmark"><?php the_title(); ?></a></h2>
 <?php endif; ?>
