@@ -1,10 +1,10 @@
 /*
 Theme Name: Responsive
 Theme URI: http://cyberchimps.com/responsive-theme/
-Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload and Social Networking. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, Search Engine Friendly, W3C Markup Validated and currently translated into over 45 languages. Cross-Browser compatible. Includes a Testimonial section so you can highlight positive feedback from your customers and boost conversion. Includes a team section to display your team members details. Has a customizable call-out section for key messages, with a Call-To-Action Button. An elegant Contact section to display your address & contact form. Includes Custom WooCommerce Templates. 3 Site layout available - Dafault , full width & full width without boxes. Option available to add sticky header. Includes 3 different blog layouts - Blog (full posts), Blog Excerpt & Blog layout with 3 Column <a href="https://cyberchimps.com/forum/free/responsive/">Official support forum</a> (https://cyberchimps.com/forum/free/responsive/). For Weekly Tips on how to get the most out of this theme, sign up here <a href="https://cyberchimps.com/weekly-tips-free-responsive-free-theme/">https://cyberchimps.com/weekly-tips-free-responsive-free-theme/ </a>. View theme demo here <a href="https://cyberchimps.com/responsive-demo/">https://cyberchimps.com/responsive-demo/ </a>
+Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload and Social Networking. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, Search Engine Friendly, W3C Markup Validated and currently translated into over 45 languages. Cross-Browser compatible. Includes a Testimonial section so you can highlight positive feedback from your customers and boost conversion. Includes a team section to display your team members details. Has a customizable call-out section for key messages, with a Call-To-Action Button. An elegant Contact section to display your address & contact form. Includes Custom WooCommerce Templates. 3 Site layout available - Dafault , full width & full width without boxes. Option available to add sticky header. Includes 3 different blog layouts - Blog (full posts), Blog Excerpt & Blog layout with 3 Column. Option available to filter categories from Blog page <a href="https://cyberchimps.com/forum/free/responsive/">Official support forum</a> (https://cyberchimps.com/forum/free/responsive/). For Weekly Tips on how to get the most out of this theme, sign up here <a href="https://cyberchimps.com/weekly-tips-free-responsive-free-theme/">https://cyberchimps.com/weekly-tips-free-responsive-free-theme/ </a>. View theme demo here <a href="https://cyberchimps.com/responsive-demo/">https://cyberchimps.com/responsive-demo/ </a>
 Author: CyberChimps.com
 Author URI: http://cyberchimps.com
-Version: 3.5
+Version: 3.6
 Tags: custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready, rtl-language-support, featured-images, blog
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
